@@ -1,3 +1,8 @@
+2007-07-03  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V01-00-05
+	* create monitorable infospace the xdaq3.9 (xmas) way
+
 2007-03-26  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V00-11-02
